LPS-111558 change system notification z-index to a considerably higher value to avoid 3rd party pop-up/modal/maximize solution to interfere

--- a/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_notification.scss
+++ b/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_notification.scss
@@ -19,7 +19,7 @@
 	padding-top: 15px;
 	position: fixed;
 	width: 100%;
-	z-index: 5000;
+	z-index: 999999;
 
 	.lfr-notification-wrapper {
 		margin-bottom: 5px;
